    - Add a new V3AuthUseLegacyKey option to make it easier for authorities
      to change their identity keys if they have to.
    - If the user has applied the experimental SSL_MODE_RELEASE_BUFFERS
      patch to their OpenSSL, turn it on to save memory on servers.  This
      patch will (with any luck) get included in a mainline distribution
      before too long.

  o Minor features (security):
    - Reject requests for reverse-dns lookup of names in a private
      address space.  Patch from Lodger.

  o Code simplifications and refactoring:
    - Refactor code using connection_ap_handshake_attach_circuit() to
      allow that function to mark connections for close.  Part of a fix for
      bug 617.  Bugfix on 0.2.0.1-alpha.
    - Add a macro to implement the common pattern of iterating through
      two parallel lists in lockstep.


Changes in version 0.2.0.26-rc - 2008-05-13
  Tor 0.2.0.26-rc fixes a major security vulnerability caused by a bug
  in Debian's OpenSSL packages. All users running any 0.2.0.x version
  should upgrade, whether they're running Debian or not.

  o Major security fixes:
    - Use new V3 directory authority keys on the tor26, gabelmoo, and
      moria1 V3 directory authorities. The old keys were generated with
      a vulnerable version of Debian's OpenSSL package, and must be
      considered compromised. Other authorities' keys were not generated
      with an affected version of OpenSSL.

  o Major bugfixes:
    - List authority signatures as "unrecognized" based on DirServer
      lines, not on cert cache. Bugfix on 0.2.0.x.

  o Minor features:
    - Add a new V3AuthUseLegacyKey option to make it easier for
      authorities to change their identity keys if they have to.


Changes in version 0.2.0.25-rc - 2008-04-23
  Tor 0.2.0.25-rc makes Tor work again on OS X and certain BSDs.

  o Major bugfixes:
    - Remember to initialize threading before initializing logging.