@@ -98,6 +98,8 @@ Changes in version 0.2.1.1-alpha - 2008-??-??
       patch to their OpenSSL, turn it on to save memory on servers.  This
       patch will (with any luck) get included in a mainline distribution
       before too long.
+    - Add a "PURPOSE=" argument to "STREAM NEW" events, as suggested by
+      Robert Hogan. Fixes the first part of bug 681.
 
   o Minor features (security):
     - Reject requests for reverse-dns lookup of names in a private
